--- a/src/app/pages/favorite/favorite.component.html
+++ b/src/app/pages/favorite/favorite.component.html
@@ -1,1 +1,12 @@
-<p>favorite works!</p>
+<div class="container py-5">
+    <h3 class="display-3">Favorites</h3>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <p class="lead text-body-secondary">
+                Unlock a treasure trove of cinematic gems! This carefully curated list showcases all the movies you've
+                saved, promising an exciting voyage into your next movie magic moment!
+            </p>
+        </div>
+    </div>
+    <app-list-card [listData]="listFavorites"></app-list-card>
+</div>
