--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">The Movie Database</a>
-            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
+            <a class="navbar-brand" [routerLink]="['/']">The Movie Database</a>
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
                 <li class="nav-item" *ngFor="let val of listNavbar">
                     <a class="nav-link active" [routerLink]="val?.route">{{ val?.label }}</a>
                 </li>
