--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+    width: 0.1em;
+}
+
+.scrollbar-hidden::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
